--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-<header>
+<header class="header">
     <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -20,6 +20,16 @@
             </li>
         </ul>
     </nav>
+    <div class="banner">
+        <div>
+            <h3 class="banner-greeting">Hi I am</h3>
+            <h1 class="banner-title">Mary Hardy</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias atque ipsa pariatur perferendis quasi recusandae repellat sunt ullam ut?</p>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact Me</button>
+        </div>
+        <img class="profile-pic" src="images/hardy.png" alt="">
+    </div>
 </header>
 <main>
 
