--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </ul>
     </nav>
     <div class="banner">
-        <div>
+        <div class="banner-content">
             <h3 class="banner-greeting">Hi I am</h3>
             <h1 class="banner-title">Mary Hardy</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias atque ipsa pariatur perferendis quasi recusandae repellat sunt ullam ut?</p>
+            <p class=".banner-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias atque ipsa pariatur perferendis quasi recusandae repellat sunt ullam ut?</p>
             <button class="btn-primary">Download CV</button>
             <button class="btn-primary">Contact Me</button>
         </div>
