--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
     </div>
 </header>
 <main>
-
+    <section class="about">
+        <h3 class="section-title">
+            About Me
+        </h3>
+        <p class="section-description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus assumenda dicta et harum ipsum, labore laborum quaerat vero.
+        </p>
+    </section>
 </main>
 <footer>
 
