--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
     </div>
     <div class="footer-column">
         <h3 class="section-title"> Let’s Message me</h3>
+        <from class="contact">
+            <input type="text" placeholder="Your name">
+            <input type="email" placeholder="your email">
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <input class="btn-primary" type="submit" value="submit">
+        </from>
     </div>
 </footer>
 </body>
