--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+
 </head>
 <body>
 <header class="header">
@@ -25,8 +28,8 @@
             <h3 class="banner-greeting">Hi I am</h3>
             <h1 class="banner-title">Mary Hardy</h1>
             <p class=".banner-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias atque ipsa pariatur perferendis quasi recusandae repellat sunt ullam ut?</p>
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-primary">Contact Me</button>
+            <button class="btn-primary"><i class='bx bx-download'></i>Download CV</button>
+            <button class="btn-primary"><i class='bx bx-phone'></i>Contact Me</button>
         </div>
         <img class="profile-pic" src="images/hardy.png" alt="">
     </div>
@@ -59,12 +62,12 @@
         </div>
     </section>
 
-<!--    what i do section start-->
+<!--    what I do section start-->
     <section>
         <h3 id="what-i-do" class="section-title">What I do</h3>
         <p class="section-description">
             I have more than 10 years experience building software for clients all over the world. Below is a quick
-            overview of my main technical skill sets and technologies i use. Want to find out more about my experience?
+            overview of my main technical skill sets and technologies I use. Want to find out more about my experience?
             Check out my online resume and project portfolio
         </p>
     </section>
@@ -181,12 +184,13 @@
     </div>
     <div class="footer-column">
         <h3 class="section-title"> Let’s Message me</h3>
-        <from class="contact">
+        <form class="contact">
             <input type="text" placeholder="Your name">
             <input type="email" placeholder="your email">
             <textarea name="" id="" cols="30" rows="10"></textarea>
             <input class="btn-primary" type="submit" value="submit">
-        </from>
+        </form>
+
     </div>
 </footer>
 </body>
